# trains

./: README.md  main.py  pyproject.toml
data/: journey.json
data/geojson/: brenner_innsbruck.geojson  menton_sanremo.geojson  ventimiglia_nice.geojson  waidbruck_brenner.geojson
data/gpx/: brenner_innsbruck.gpx  menton_sanremo.gpx  ventimiglia_nice.gpx  waidbruck_brenner.gpx
output/: total_journey.geojson  train_journeys.geojson
site/: package-lock.json  package.json  webpack.config.js
site/src/: index.html  main.ts
site/src/output/: train_journeys.json  train_stations.geojson
