[tool.poetry]
name = "trains"
version = "0.1.0"
description = ""
authors = ["01001100 <davidwhittingham94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
geojson = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
